[gd_scene load_steps=11 format=2]

[ext_resource path="res://Infinite.gd" type="Script" id=1]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Area/Day.png" type="Texture" id=3]
[ext_resource path="res://assets/SPRITES/Hero/Idle.png" type="Texture" id=4]
[ext_resource path="res://assets/SPRITES/Heart/heart.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.9993, 280 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 1.0
margin_right = 561.0
margin_bottom = 935.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 279, 895 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 4 )

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2( -1, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2( 281, 576 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnContainer"]
position = Vector2( 100, -34 )

[node name="Position2D5" type="Position2D" parent="SpawnContainer"]
position = Vector2( 220, -34 )

[node name="Position2D2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 340, -34 )

[node name="Position2D3" type="Position2D" parent="SpawnContainer"]
position = Vector2( 460, -34 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_right = 6.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 570.0
margin_bottom = 929.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
margin_left = 165.0
margin_top = 220.0
margin_right = 397.0
margin_bottom = 702.0
custom_constants/separation = 50

[node name="TopRowLeft" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 54.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft"]
margin_right = 132.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "Score:"

[node name="ScoreValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft"]
margin_left = 136.0
margin_right = 136.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 6 )

[node name="TopRowLeft2" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 232.0
margin_bottom = 158.0

[node name="AccuracyLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft2"]
margin_right = 198.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "Accuracy:"

[node name="AccuracyValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft2"]
margin_left = 202.0
margin_right = 202.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 6 )

[node name="TopRowLeft3" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 232.0
margin_bottom = 262.0

[node name="WordsLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft3"]
margin_right = 132.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "Words:"

[node name="WordsValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/TopRowLeft3"]
margin_left = 136.0
margin_right = 136.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 6 )

[node name="Restart" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 232.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 4 )
text = "PLAY AGAIN"

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 232.0
margin_bottom = 482.0
custom_fonts/font = SubResource( 4 )
text = "STAGE MENU"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopRowLeft" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 560.0
margin_bottom = 38.0

[node name="EnemiesKilledLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_right = 90.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="EnemiesKilledValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_left = 94.0
margin_right = 109.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TopRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TopRowLeft"]
margin_left = 113.0
margin_right = 553.0
margin_bottom = 38.0
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_right = 210.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "        Timer:"

[node name="TimerValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 214.0
margin_right = 289.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "00:00"

[node name="TimerValue2" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 293.0
margin_right = 383.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "      "

[node name="PauseButton" type="Button" parent="CanvasLayer/VBoxContainer/TopRowLeft/TopRow"]
margin_left = 387.0
margin_right = 440.0
margin_bottom = 38.0
text = "PAUSE"

[node name="TopRowLeft2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 42.0
margin_right = 560.0
margin_bottom = 80.0

[node name="TopRow2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TopRowLeft2"]
margin_right = 184.0
margin_bottom = 38.0
mouse_filter = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft2/TopRow2"]
margin_right = 165.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty:"

[node name="DifficultyValue" type="Label" parent="CanvasLayer/VBoxContainer/TopRowLeft2/TopRow2"]
margin_left = 169.0
margin_right = 184.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MiddleRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 560.0
margin_bottom = 506.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MiddleRow2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 510.0
margin_right = 560.0
margin_bottom = 932.0
mouse_filter = 2
size_flags_vertical = 3

[node name="BottomRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 936.0
margin_right = 560.0
margin_bottom = 936.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/BottomRow"]
mouse_filter = 2

[node name="Life1" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 889.0
margin_right = 1083.0
margin_bottom = 1969.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 5 )

[node name="Life2" type="TextureRect" parent="."]
margin_left = 53.0
margin_top = 889.0
margin_right = 1133.0
margin_bottom = 1969.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 5 )

[node name="Life3" type="TextureRect" parent="."]
margin_left = 103.0
margin_top = 889.0
margin_right = 1183.0
margin_bottom = 1969.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="LoseArea" to="." method="_on_LoseArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TopRowLeft/TopRow/PauseButton" to="." method="_on_PauseButton_pressed"]
